--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
   background-color: #cccccc;
   font-family: fantasy;
   font-size: 18px;
-  text-align: center;
+  text-align: left;
   margin: 15px;
 }
 h1 {
@@ -19,8 +19,8 @@ strong{
   color:#1692D5;
 }
 img{
-    max-width: 250px;
-    height: 200px;
+    max-width: 450px;
+    height: 250px;
 }
 .column{
   width:350px;
@@ -47,4 +47,10 @@ img{
 }
 .hor{
    float: left;
+}
+ul{
+  list-style-type:disc;
+}
+.plane{
+  float: right;
 }
